--- a/source/sass/grid.scss
+++ b/source/sass/grid.scss
@@ -28,7 +28,3 @@
   flex-direction: column;
   margin: 0 auto;
 }
-
-main {
-  margin-top: -56px;
-}
